tests/Fail/test8.cm
int main (void)
{
	int x = 3; /* Error here, cant declare and assign at same time */
	return x;
}